@@ -1,7 +1,13 @@
 package com.ssafy.pillme.management.application;
 
+import static com.ssafy.pillme.global.code.ErrorCode.INFORMATION_NOT_FOUND;
+import static com.ssafy.pillme.global.code.ErrorCode.MANAGEMENT_NOT_FOUND;
+import static com.ssafy.pillme.global.code.ErrorCode.MEDICATION_NOT_FOUND;
+
 import com.ssafy.pillme.auth.domain.entity.Member;
+import com.ssafy.pillme.auth.infrastructure.repository.UserRepository;
 import com.ssafy.pillme.global.code.ErrorCode;
+import com.ssafy.pillme.global.exception.CommonException;
 import com.ssafy.pillme.management.application.exception.NoInformationException;
 import com.ssafy.pillme.management.application.exception.NoManagementException;
 import com.ssafy.pillme.management.application.exception.NoMedicationException;
@@ -12,13 +18,16 @@ import com.ssafy.pillme.management.domain.Management;
 import com.ssafy.pillme.management.domain.item.TakingInformationItem;
 import com.ssafy.pillme.management.infrastructure.InformationRepository;
 import com.ssafy.pillme.management.infrastructure.ManagementRepository;
+import com.ssafy.pillme.management.presentation.request.AllTakingCheckRequest;
 import com.ssafy.pillme.management.presentation.request.ChangeTakingInformationRequest;
 import com.ssafy.pillme.management.presentation.request.DeleteManagementRequest;
 import com.ssafy.pillme.management.presentation.request.MedicationRegisterRequest;
+import com.ssafy.pillme.management.presentation.request.SingleTakingCheckRequest;
 import com.ssafy.pillme.search.domain.Medication;
 import com.ssafy.pillme.search.infrastructure.MedicationRepository;
 import java.time.LocalDate;
 import java.util.List;
+import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
@@ -32,11 +41,13 @@ public class ManagementService {
     private final ManagementRepository managementRepository;
     private final InformationRepository informationRepository;
     private final MedicationRepository medicationRepository;
+    private final UserRepository memberRepository;
 
     public void saveTakingInformation(final MedicationRegisterRequest request) {
         // TODO: 인증을 통한 맴버 객체 생성 완료 후에는 정식 엔티티로 바꿔야 한다.
         Member writer = Member.builder().build();
-        Member reader = Member.builder().build();
+        Member reader = memberRepository.findById(request.reader())
+                .orElseThrow(() -> new CommonException(ErrorCode.USER_NOT_FOUND));
         Information savedInformation = informationRepository.save(request.toInformation(writer, reader));
         saveManagement(request.takingInformationItems(), savedInformation);
     }
@@ -44,7 +55,7 @@ public class ManagementService {
     private void saveManagement(final List<TakingInformationItem> takingList, final Information information) {
         for (TakingInformationItem info : takingList) {
             Medication medication = medicationRepository.findById(info.medicationId())
-                    .orElseThrow(() -> new NoMedicationException(ErrorCode.MEDICATION_NOT_FOUND));
+                    .orElseThrow(() -> new NoMedicationException(MEDICATION_NOT_FOUND));
 
             Management management = info.toManagement(medication, information);
             managementRepository.save(management);
@@ -54,14 +65,14 @@ public class ManagementService {
     @Transactional(readOnly = true)
     public TakingDetailResponse findByInformationId(final Long id) {
         Information information = informationRepository.findById(id)
-                .orElseThrow(() -> new NoInformationException(ErrorCode.INFORMATION_NOT_FOUND));
+                .orElseThrow(() -> new NoInformationException(INFORMATION_NOT_FOUND));
 
         return TakingDetailResponse.of(
                 information,
                 information.getManagements()
                         .stream()
                         .map(TakingInformationItem::from)
-                        .toList()
+                        .collect(Collectors.toList())
         );
     }
 
@@ -77,15 +88,49 @@ public class ManagementService {
         request.medications().forEach(medication -> {
             Management management = managementRepository
                     .findByInformationIdAndMedicationId(infoId, medication.medicationId())
-                    .orElseThrow(() -> new NoManagementException(ErrorCode.INFORMATION_NOT_FOUND));
+                    .orElseThrow(() -> new NoManagementException(INFORMATION_NOT_FOUND));
 
             management.changeTakingInformation(medication);
         });
     }
 
-    public void deleteInformation(final Long infoId) {
+    public void checkSingleMedicationTaking(final Long infoId, final SingleTakingCheckRequest request) {
+        Management management = managementRepository.findByInformationIdAndMedicationId(infoId, request.medicationId())
+                .orElseThrow(() -> new NoManagementException(MANAGEMENT_NOT_FOUND));
+
+        checkMedicationTaking(management, request.time());
+    }
+
+    public void checkAllMedicationTaking(final Long infoId, final AllTakingCheckRequest request) {
+        Information information = informationRepository.findById(infoId)
+                .orElseThrow(() -> new NoInformationException(INFORMATION_NOT_FOUND));
+
+        for (Management management : information.getManagements()) {
+            checkMedicationTaking(management, request.time());
+        }
+    }
+
+    private void checkMedicationTaking(final Management management, String time) {
+        management.checkMedicationTaking(time);
+    }
+
+    public void deleteManagement(final Long infoId, final DeleteManagementRequest request) {
+        if (request.medications().isEmpty()) {
+            deleteInformation(infoId);
+            return;
+        }
+
+        for (Long medicationId : request.medications()) {
+            Management management = managementRepository.findByInformationIdAndMedicationId(medicationId, infoId)
+                    .orElseThrow(() -> new NoManagementException(INFORMATION_NOT_FOUND));
+
+            management.delete();
+        }
+    }
+
+    private void deleteInformation(final Long infoId) {
         Information information = informationRepository.findByIdAndDeletedIsFalse(infoId)
-                .orElseThrow(() -> new NoInformationException(ErrorCode.INFORMATION_NOT_FOUND));
+                .orElseThrow(() -> new NoInformationException(INFORMATION_NOT_FOUND));
 
         information.delete();
 
@@ -94,12 +139,4 @@ public class ManagementService {
         }
     }
 
-    public void deleteManagement(final Long infoId, final DeleteManagementRequest request) {
-        for (Long medicationId : request.medications()) {
-            Management management = managementRepository.findByInformationIdAndMedicationId(medicationId, infoId)
-                    .orElseThrow(() -> new NoManagementException(ErrorCode.INFORMATION_NOT_FOUND));
-
-            management.delete();
-        }
-    }
 }
